--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-shopify",
-  "version": "0.0.1-alpha.3",
+  "version": "0.1.0",
   "description": "React Native bridge for Shopify Mobile Buy SDK for iOS and Android",
   "main": "index.js",
   "scripts": {
